[project]
name = "ubucon26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.3",
    "cerberus>=1.3.8",
    "coverage>=7.13.5",
    "empy>=3.3,<4",
    "future>=1.0.0",
    "jinja2>=2.8",
    "jsonschema>=4.26.0",
    "kconfiglib>=14.1.0",
    "lark>=1.3.1",
    "lxml>=6.0.2",
    "matplotlib>=3.0",
    "mavproxy[desktop]>=1.8.74",
    "numpy>=1.13",
    "nunavut>=1.1.0",
    "opencv-python>=4.11.0.86",
    "packaging>=26.0",
    "pandas>=0.21",
    "pillow>=12.1.1",
    "pkgconfig>=1.6.0",
    "psutil>=7.2.2",
    "pycryptodome>=3.23.0",
    "pyelftools>=0.32,<1",
    "pygments>=2.19.2",
    "pymavlink>=2.4.49",
    "pyros-genmsg>=0.5.8",
    "pyserial>=3.5",
    "pyulog>=0.5.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "setuptools>=39.2.0",
    "six>=1.12.0",
    "symforce>=0.9.0",
    "sympy>=1.10.1",
    "toml>=0.9",
    "wheel>=0.31.1",
]
